--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -17,23 +17,30 @@
         letter-spacing: 0.1em;
         padding: 1rem 0;
         background-position: 3% 97%;
-        height: 450px;
         width: 100%;
 
-        @include mq(1024px) {
+        @include bp(desktop-large) {
+            height: 500px;
+        }
+
+        @include bp(desktop) {
+            height: 450px;
+        }
+
+        @include bp(laptop) {
             height: 400px;
         }
 
-        @include mq(768px) {
+        @include bp(tablet) {
             height: 350px;
             background-position: 25% 75%;
         }
 
-        @include mq(640px) {
+        @include bp(large-phone) {
             background-position: 35% 65%;
         }
 
-        @include mq(480px) {
+        @include bp(phone) {
             background-position: 55% 45%;
         }
 
@@ -67,12 +74,12 @@
                     padding-right: 1rem;
                 }
                 p {
-                    @include mq(640px) {
-                        font-size: 18px;
+                    @include bp(large-phone) {
+                        font-size: var(--font-size-larger);
                     }
     
-                    @include mq(480px) {
-                        font-size: 16px;
+                    @include bp(phone) {
+                        font-size: var(--font-size-default);
                     }
                 }
             }
@@ -86,23 +93,23 @@
                 padding-bottom: 0.3em;
                 padding-top: 4rem;
 
-                @include mq(1024px) {
+                @include bp(laptop) {
                     font-size: 44px;
                 }
         
-                @include mq(768px) {
+                @include bp(tablet) {
                     font-size: 38px;
                 }
 
-                @include mq(640px) {
+                @include bp(large-phone) {
                     font-size: 32px;
                 }
 
-                @include mq(480px) {
+                @include bp(phone) {
                     font-size: 28px;
                     padding-top: 3rem;
                 }
-                @include mq(320px) {
+                @include bp(small-phone) {
                     padding-top: 0;
                 }
             }
@@ -112,34 +119,33 @@
                 margin: 0 auto;
                 margin-bottom: 2.5rem;
 
-                @include mq(1024px) {
-                    font-size: 18px;
+                @include bp(laptop) {
+                    font-size: var(--font-size-larger);
                     width: 40%;
                 }
         
-                @include mq(768px) {
-                    font-size: 18px;
+                @include bp(tablet) {
                     width: 55%;
                     margin-bottom: 2rem;
                 }
 
-                @include mq(640px) {
-                    font-size: 16px;
+                @include bp(large-phone) {
+                    font-size: var(--font-size-default);
                     width: 70%;
                     margin-bottom: 1.5rem;
                 }
 
-                @include mq(480px) {
-                    font-size: 14px;
+                @include bp(phone) {
+                    font-size: var(--font-size-smaller);
                     width: 90%;
                 }
-                @include mq(320px) {
+                @include bp(small-phone) {
                     margin-bottom: 0.5rem;
                 }
             }
             a {
                 color: white;
-                background-color: rgb(21, 47, 99);
+                background-color: var(--color-darkblue);
                 border-radius: 1.5rem;
                 padding: 0.8rem 2.7rem;
                 text-decoration: none;
@@ -152,25 +158,25 @@
                 transition: background-color 0.4s ease-in-out;
 
                 &:hover {
-                    background-color: rgb(107, 107, 107);
+                    background-color: var(--color-grey);
                 }
 
-                @include mq(1024px) {
+                @include bp(laptop) {
                     padding: 0.7rem 2.5rem;
-                    font-size: 16px;
+                    font-size: var(--font-size-default);
                 }
         
-                @include mq(768px) {
+                @include bp(tablet) {
                     padding: 0.6rem 2.1rem;
-                    font-size: 14px;
+                    font-size: var(--font-size-smaller);
                 }
 
-                @include mq(640px) {
+                @include bp(large-phone) {
                     padding: 0.5rem 1.7rem;
-                    font-size: 12px;
+                    font-size: var(--font-size-supersmall);
                 }
 
-                @include mq(480px) {
+                @include bp(phone) {
                     padding: 0.4rem 1.5rem;
                 }
             }
