--- a/_assets/scss/_mixins.scss
+++ b/_assets/scss/_mixins.scss
@@ -1,5 +1,43 @@
-@mixin mq($width) {
-    @media screen and (max-width: $width){
-        @content;
+@mixin bp($point) {
+    @if $point == desktop-large {
+        @media (min-width: 1800px) {
+            @content;
+        }
+    }
+
+    @else if $point == desktop {
+        @media (min-width: 1025px) and (max-width: 1799px){
+            @content;
+        }
+    }
+
+    @else if $point == laptop {
+        @media (max-width: 1024px) {
+            @content;
+        }
+    }
+
+    @else if $point == tablet {
+        @media (max-width: 768px) {
+            @content;
+        }
+    }
+
+    @else if $point == large-phone {
+        @media (max-width: 640px) {
+            @content;
+        }
+    }
+
+    @else if $point == phone {
+        @media (max-width: 480px) {
+            @content;
+        }
+    }
+
+    @else if $point == small-phone {
+        @media (max-width: 320px) {
+            @content;
+        }
     }
 }
