--- a/_assets/scss/_reset.scss
+++ b/_assets/scss/_reset.scss
@@ -8,23 +8,25 @@
 
 html {
     box-sizing: border-box;
-    font: 16px/1.5 'Roboto', sans-serif;
+    font-size: var(--font-size-default);
+    line-height: var(--line-height-default);
+    font-family: var(--font-family-default);
 }
 
 @media (max-width: 600px) {
     html {
-        font-size: 12px;
+        font-size: var(--font-size-supersmall);
     }
 }
 
 @media (max-width: 1024px) {
     html {
-        font-size: 14px;
+        font-size: var(--font-size-smaller);
     }
 }
 
 @media (max-width: 1600px) {
     html {
-        font-size: 16px;
+        font-size: var(--font-size-default);
     }
 }
