--- a/_assets/scss/_site-main-transitions.scss
+++ b/_assets/scss/_site-main-transitions.scss
@@ -5,7 +5,7 @@
         transition: opacity 0.2s ease-in, transform 0.2s ease-in-out;
         transition-delay: 1.1s;
 
-        @include mq(1024px) {
+        @include bp(laptop) {
             transition-delay: 0.3s;
         }
 
