--- a/_assets/scss/_site-navigation-responsive.scss
+++ b/_assets/scss/_site-navigation-responsive.scss
@@ -32,7 +32,7 @@
                     li {
                         opacity: 0;
                         width: 100%;
-                        font-size: 16px;
+                        font-size: var(--font-size-default);
                         transition: opacity 0.35s ease-in;
                         a {
                             &:hover {
