--- a/_assets/scss/pages/news.scss
+++ b/_assets/scss/pages/news.scss
@@ -1,12 +1,8 @@
-@mixin mq($width) {
-    @media screen and (max-width: $width){
-        @content;
-    }
-}
+@import '../mixins';
 
 .site {
     &-main {
-        color: rgb(21, 47, 99);
+        color: var(--color-darkblue);
         text-align: center;
         margin: 1rem 0;
 
@@ -17,7 +13,7 @@
                 content: '';
                 width: 100px;
                 height: 2px;
-                background-color: rgb(21, 47, 99);
+                background-color: var(--color-darkblue);
                 display: block;
                 margin: 1rem auto;
             }
@@ -31,11 +27,11 @@
             padding-bottom: 1rem;
 
             h3 {
-                @include mq(1024px) {
-                    font-size: 16px;
+                @include bp(laptop) {
+                    font-size: var(--font-size-default);
                 }
         
-                @include mq(768px) {
+                @include bp(tablet) {
                     font-size: 15px;
                 }
             }
@@ -48,24 +44,24 @@
                 color: grey;
                 padding: 0.4rem 0;
 
-                @include mq(1024px) {
-                    font-size: 12px;
+                @include bp(laptop) {
+                    font-size: var(--font-size-supersmall);
                     padding: 0.3rem 0;
                 }
         
-                @include mq(768px) {
+                @include bp(tablet) {
                     font-size: 10px;
                     padding: 0.2rem 0;
                 }
             }
 
             .news-description {
-                @include mq(1024px) {
-                    font-size: 14px;
+                @include bp(laptop) {
+                    font-size: var(--font-size-smaller);
                 }
         
-                @include mq(768px) {
-                    font-size: 12px;
+                @include bp(tablet) {
+                    font-size: var(--font-size-supersmall);
                 }
             }
         }
