--- a/_assets/scss/pages/vehicles.scss
+++ b/_assets/scss/pages/vehicles.scss
@@ -1,13 +1,9 @@
-@mixin mq($width) {
-    @media screen and (max-width: $width){
-        @content;
-    }
-}
+@import '../mixins';
 
 .site {
     &-main {
         margin: 1rem;
-        color: rgb(21, 47, 99);
+        color: var(--color-darkblue);
         h2 {
             text-align: center;
 
@@ -15,7 +11,7 @@
                 content: '';
                 width: 100px;
                 height: 2px;
-                background-color: rgb(21, 47, 99);
+                background-color: var(--color-darkblue);
                 display: block;
                 margin: 1rem auto;
             }
@@ -32,30 +28,30 @@
             justify-items: center;
             position: relative;
 
-            @include mq(1024px) {
+            @include bp(laptop) {
                 grid-template-columns: repeat(9, 1fr);
             }
 
-            @include mq(768px) {
+            @include bp(tablet) {
                 grid-template-columns: repeat(8, 1fr);
             }
 
             li {
                 list-style: none;
-                outline: 4px solid rgb(21, 47, 99);
+                outline: 4px solid var(--color-darkblue);
                 grid-column: span 3;
                 display: flex;
-                box-shadow: 0 0 0.6em 0.3em rgb(21, 47, 99);
+                box-shadow: 0 0 0.6em 0.3em var(--color-darkblue);
 
-                @include mq(1024px) {
+                @include bp(laptop) {
                     grid-column: span 3;
                 }
                 
-                @include mq(768px) {
+                @include bp(tablet) {
                     grid-column: span 4;
                 }
     
-                @include mq(640px) {
+                @include bp(large-phone) {
                     grid-column: span 8;
                 }
 
@@ -77,7 +73,7 @@
                     padding: 0.5em;
                     cursor: pointer;
 
-                    @include mq(768px) {
+                    @include bp(tablet) {
                         pointer-events: none;
                     }
 
@@ -117,11 +113,11 @@
                         position: absolute;
                         top: 2em; right: 8em;
 
-                        @include mq(1024px) {
+                        @include bp(laptop) {
                             top: 4em; right: 4em;
                         }
 
-                        @include mq(768px) {
+                        @include bp(tablet) {
                             display: none;
                         }
 
@@ -134,7 +130,7 @@
                             .trolleybuses .close {
                                 top: -8em; right: 8em;
 
-                                @include mq(1024px) {
+                                @include bp(laptop) {
                                     top: -5em; right: 4em;
                                 }
                 
@@ -143,7 +139,7 @@
                         @at-root .site-main{
                             .trams .close {
                                 top: 0; right: 8em;
-                                @include mq(1024px) {
+                                @include bp(laptop) {
                                     top: 1em; right: 4em;
                                 }
                             }
@@ -151,7 +147,7 @@
                         @at-root .site-main{
                             .metro .close {
                                 top: -8em; right: 8em;
-                                @include mq(1024px) {
+                                @include bp(laptop) {
                                     top: -8em; right: 4em;
                                 }
                             }
@@ -168,7 +164,7 @@
                     
                     &.close {
                         display: flex;
-                        @include mq(768px) {
+                        @include bp(tablet) {
                             display: none;
                         }
                     }
@@ -176,7 +172,7 @@
         
                 input:checked ~ a {
                     display: flex;
-                    @include mq(768px) {
+                    @include bp(tablet) {
                         display: none;
                     }
                 }
@@ -193,18 +189,18 @@
                     box-shadow: 0 0 100vw 100vw rgba(black, 0.9);
                     background: rgba(black, 0.9);
 
-                    @include mq(1024px) {
+                    @include bp(laptop) {
                         width: 70vw;
                         height: 70vh;
                     }
             
-                    @include mq(768px) {
+                    @include bp(tablet) {
                         width: 60vw;
                         height: 50vh;
                     }
         
                     span {
-                        @include mq(768px) {
+                        @include bp(tablet) {
                             display: none;
                         }
                         position: absolute;
@@ -212,7 +208,7 @@
                     }
         
                     img {
-                        @include mq(768px) {
+                        @include bp(tablet) {
                             display: none;
                         }
                         width: 100%;
