--- a/docs/css/pages/contacts.css
+++ b/docs/css/pages/contacts.css
@@ -1,5 +1,5 @@
 .site-main {
-  color: #152f63;
+  color: var(--color-darkblue);
   text-align: justify; }
   .site-main h2 {
     text-align: center;
@@ -8,7 +8,7 @@
       content: '';
       width: 100px;
       height: 2px;
-      background-color: #152f63;
+      background-color: var(--color-darkblue);
       display: block;
       margin: 1rem auto; }
   .site-main section {
@@ -37,22 +37,22 @@
       .site-main section .second-part li {
         flex: 0 0 15%; }
         .site-main section .second-part li a {
-          color: #152f63; }
+          color: var(--color-darkblue); }
           .site-main section .second-part li a:hover {
-            color: #6b6b6b; }
-    @media screen and (max-width: 1024px) {
+            color: var(--color-grey); }
+    @media (max-width: 1024px) {
       .site-main section {
-        font-size: 18px; } }
-    @media screen and (max-width: 768px) {
+        font-size: var(--font-size-larger); } }
+    @media (max-width: 768px) {
       .site-main section {
-        font-size: 16px; }
+        font-size: var(--font-size-default); }
         .site-main section .first-part {
           width: 260px;
           padding-right: 0; } }
-    @media screen and (max-width: 480px) {
+    @media (max-width: 480px) {
       .site-main section {
         display: block;
-        font-size: 14px;
+        font-size: var(--font-size-smaller);
         padding-bottom: 0; }
         .site-main section .first-part {
           width: 100%;
@@ -73,6 +73,6 @@
     margin: 0 auto;
     text-align: center;
     margin-bottom: 2rem; }
-    @media screen and (max-width: 768px) {
+    @media (max-width: 768px) {
       .site-main .map iframe {
         width: 90%; } }
