--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -6,26 +6,51 @@
 
 html {
   box-sizing: border-box;
-  font: 16px/1.5 'Roboto', sans-serif; }
+  font-size: var(--font-size-default);
+  line-height: var(--line-height-default);
+  font-family: var(--font-family-default); }
 
 @media (max-width: 600px) {
   html {
-    font-size: 12px; } }
+    font-size: var(--font-size-supersmall); } }
 
 @media (max-width: 1024px) {
   html {
-    font-size: 14px; } }
+    font-size: var(--font-size-smaller); } }
 
 @media (max-width: 1600px) {
   html {
-    font-size: 16px; } }
+    font-size: var(--font-size-default); } }
 
+:root {
+  --font-size-supersmall: 12px;
+  --font-size-smaller: 14px;
+  --font-size-default: 16px;
+  --font-size-larger: 18px;
+  --line-height-default: 1.5;
+  --font-family-default: 'Roboto', sans-serif;
+  --color-darkblue: rgb(21, 47, 99);
+  --color-blue: rgb(50, 88, 165);
+  --color-grey: rgb(107, 107, 107);
+  --color-darkblue-gallery: rgb(0, 18, 53); }
+
+/*@keyframes slideToRight {
+    from {
+        opacity: 0;
+        transform: translateX(-1em);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}*/
 .site-main {
   opacity: 0;
   transform: translateY(-2em);
   transition: opacity 0.2s ease-in, transform 0.2s ease-in-out;
   transition-delay: 1.1s; }
-  @media screen and (max-width: 1024px) {
+  @media (max-width: 1024px) {
     .site-main {
       transition-delay: 0.3s; } }
   body.loaded .site-main {
@@ -49,19 +74,24 @@ html {
   letter-spacing: 0.1em;
   padding: 1rem 0;
   background-position: 3% 97%;
-  height: 450px;
   width: 100%; }
-  @media screen and (max-width: 1024px) {
+  @media (min-width: 1800px) {
+    .site-header {
+      height: 500px; } }
+  @media (min-width: 1025px) and (max-width: 1799px) {
+    .site-header {
+      height: 450px; } }
+  @media (max-width: 1024px) {
     .site-header {
       height: 400px; } }
-  @media screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     .site-header {
       height: 350px;
       background-position: 25% 75%; } }
-  @media screen and (max-width: 640px) {
+  @media (max-width: 640px) {
     .site-header {
       background-position: 35% 65%; } }
-  @media screen and (max-width: 480px) {
+  @media (max-width: 480px) {
     .site-header {
       background-position: 55% 45%; } }
   .site-header .wrapper {
@@ -87,12 +117,12 @@ html {
       .site-header .wrapper .site-logo i {
         font-size: 30px;
         padding-right: 1rem; }
-      @media screen and (max-width: 640px) {
+      @media (max-width: 640px) {
         .site-header .wrapper .site-logo p {
-          font-size: 18px; } }
-      @media screen and (max-width: 480px) {
+          font-size: var(--font-size-larger); } }
+      @media (max-width: 480px) {
         .site-header .wrapper .site-logo p {
-          font-size: 16px; } }
+          font-size: var(--font-size-default); } }
   .site-header section {
     display: block;
     text-align: center; }
@@ -100,20 +130,20 @@ html {
       font-size: 50px;
       padding-bottom: 0.3em;
       padding-top: 4rem; }
-      @media screen and (max-width: 1024px) {
+      @media (max-width: 1024px) {
         .site-header section h1 {
           font-size: 44px; } }
-      @media screen and (max-width: 768px) {
+      @media (max-width: 768px) {
         .site-header section h1 {
           font-size: 38px; } }
-      @media screen and (max-width: 640px) {
+      @media (max-width: 640px) {
         .site-header section h1 {
           font-size: 32px; } }
-      @media screen and (max-width: 480px) {
+      @media (max-width: 480px) {
         .site-header section h1 {
           font-size: 28px;
           padding-top: 3rem; } }
-      @media screen and (max-width: 320px) {
+      @media (max-width: 320px) {
         .site-header section h1 {
           padding-top: 0; } }
     .site-header section p {
@@ -121,30 +151,29 @@ html {
       width: 35%;
       margin: 0 auto;
       margin-bottom: 2.5rem; }
-      @media screen and (max-width: 1024px) {
+      @media (max-width: 1024px) {
         .site-header section p {
-          font-size: 18px;
+          font-size: var(--font-size-larger);
           width: 40%; } }
-      @media screen and (max-width: 768px) {
+      @media (max-width: 768px) {
         .site-header section p {
-          font-size: 18px;
           width: 55%;
           margin-bottom: 2rem; } }
-      @media screen and (max-width: 640px) {
+      @media (max-width: 640px) {
         .site-header section p {
-          font-size: 16px;
+          font-size: var(--font-size-default);
           width: 70%;
           margin-bottom: 1.5rem; } }
-      @media screen and (max-width: 480px) {
+      @media (max-width: 480px) {
         .site-header section p {
-          font-size: 14px;
+          font-size: var(--font-size-smaller);
           width: 90%; } }
-      @media screen and (max-width: 320px) {
+      @media (max-width: 320px) {
         .site-header section p {
           margin-bottom: 0.5rem; } }
     .site-header section a {
       color: white;
-      background-color: #152f63;
+      background-color: var(--color-darkblue);
       border-radius: 1.5rem;
       padding: 0.8rem 2.7rem;
       text-decoration: none;
@@ -156,20 +185,20 @@ html {
       margin-bottom: 2rem;
       transition: background-color 0.4s ease-in-out; }
       .site-header section a:hover {
-        background-color: #6b6b6b; }
-      @media screen and (max-width: 1024px) {
+        background-color: var(--color-grey); }
+      @media (max-width: 1024px) {
         .site-header section a {
           padding: 0.7rem 2.5rem;
-          font-size: 16px; } }
-      @media screen and (max-width: 768px) {
+          font-size: var(--font-size-default); } }
+      @media (max-width: 768px) {
         .site-header section a {
           padding: 0.6rem 2.1rem;
-          font-size: 14px; } }
-      @media screen and (max-width: 640px) {
+          font-size: var(--font-size-smaller); } }
+      @media (max-width: 640px) {
         .site-header section a {
           padding: 0.5rem 1.7rem;
-          font-size: 12px; } }
-      @media screen and (max-width: 480px) {
+          font-size: var(--font-size-supersmall); } }
+      @media (max-width: 480px) {
         .site-header section a {
           padding: 0.4rem 1.5rem; } }
 
@@ -239,7 +268,7 @@ html {
       .site .wrapper .site-nav ul li {
         opacity: 0;
         width: 100%;
-        font-size: 16px;
+        font-size: var(--font-size-default);
         transition: opacity 0.35s ease-in; }
         .site .wrapper .site-nav ul li a:hover {
           border: none; }
@@ -292,31 +321,19 @@ html {
           background: #1d4183; } }
 
 .site-footer {
-  background: #152f63;
+  background: var(--color-darkblue);
   text-align: center;
   color: white;
   padding: 1em 0; }
   .site-footer a {
     color: white;
     text-decoration: none; }
-  @media screen and (max-width: 1024px) {
+  @media (max-width: 1024px) {
     .site-footer {
-      font-size: 16px; } }
-  @media screen and (max-width: 768px) {
+      font-size: var(--font-size-default); } }
+  @media (max-width: 768px) {
     .site-footer {
-      font-size: 14px; } }
-  @media screen and (max-width: 480px) {
+      font-size: var(--font-size-smaller); } }
+  @media (max-width: 480px) {
     .site-footer {
-      font-size: 12px; } }
-
-/*@keyframes slideToRight {
-    from {
-        opacity: 0;
-        transform: translateX(-1em);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}*/
+      font-size: var(--font-size-supersmall); } }
